fix pictures, they are not aligned

--- a/client/src/app/Components/pitch/pitch.component.css
+++ b/client/src/app/Components/pitch/pitch.component.css
@@ -22,13 +22,13 @@ img {
 }
 
 .pitch-card {
-    flex: 1 1 calc(33.33% - 1rem); /* Ensure three cards per row with spacing */
-    box-shadow: 0px 4px 6px rgba(207, 201, 201, 0.1); /* Optional: add a shadow for better appearance */
-    overflow: hidden; /* Clip overflowing content (e.g., images) */
-    background-color: #fff; /* Optional: add a background color */
+    flex: 1 1 calc(33.33% - 1rem);
+    /* box-shadow: 0px 4px 6px rgba(207, 201, 201, 0.1); */
+    overflow: hidden; 
+    background-color: #ffffff;
     display: flex;
-    flex-direction: column; /* Stack content vertically */
-    align-items: stretch; /* Ensure all content spans the card width */
+    flex-direction: column;
+    padding: 5px;
 }
 /* .pitch-card {
     flex:  1 1 calc(33.33% - 1rem);
@@ -41,6 +41,11 @@ img {
 
 .pitch-sub-heading{
     margin-left: 60px;
+    font-size: 18px;
 
 
+}
+
+.card-body {
+    padding: 1rem;
 }
